deploy/k8s/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: astronomer
  namespace: astronomer
  labels:
    app.kubernetes.io/name: astronomer
spec:
  ingressClassName: nginx
  rules:
    - host: astronomer.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: astronomer-server
                port:
                  number: 8000
